# codecomplexity

./: CODE_QUALITY.md  README.md  ai-agent-metrics.json  asteroids-metrics.json  codecomplexity-metrics.json  project_scan.json  pyproject.toml  results.json  test.c
codecomplexity/: __main__.py  analyzer.py  c_analyzer.py  cli.py  scanner.py
